#6446 closed bug (fixed)
No network and system crashing
Reported by: | berregon | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Network & Internet/Stack | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I had the alpha2 installed on my tower pc which is connect to my router by cable. Network was working fine.
Since some revisions (last one i builded is 38075, hybrid gcc2) the network applet in the notification says configuring and than says it's ready but i can't access anything on the net and trying so send me into kernel debugging land even with a single ping.
The ip isn't good anyway and in the network preference the info is incompleted.
I'm not use to submitting ticket but i attached a pic of the debugging window
Attachments (7)
Change History (33)
by , 15 years ago
comment:1 by , 15 years ago
comment:2 by , 15 years ago
I think it could be related to this bug http://dev.haiku-os.org/ticket/6295
comment:3 by , 15 years ago
Thanks for your report!
The not-working network could be related indeed, the crash definitely not. Let's concentrate on that one for now.
Unfortunately, I don't have enough information yet - it looks like a reference counting problem; the net_interface_address::interface seems to be NULL, and this should only be able to happen in case it doesn't actually point to a valid net_interface_address anymore. Can you attach the output of the shell commands "route", "ifconfig", and "arp" here?
Also, in KDL, can you issue the "net_domains" command? And from there go through the route list, and use each with the "net_route" command by using the route address as command?
That would be very helpful.
comment:4 by , 15 years ago
Component: | Network & Internet → Network & Internet/Stack |
---|---|
Owner: | changed from | to
I've improved the output of the "net_domains" KDL command in hrev38077. Please use that one, if possible. In that case, please also use the "net_interfaces" command, and dump each interface using the "net_interface" command and the address you got from the former command. Thanks!
by , 15 years ago
Attachment: | route_ifconfig_arp.png added |
---|
comment:5 by , 15 years ago
There is a slight chance that the problem goes away for you with hrev38078 - if that's the case, please retest with 38077 to provide the extra debugging info. Even if it might not happen for you with this release anymore, the original bug is still present.
comment:6 by , 15 years ago
comment:7 by , 15 years ago
If you have a USB keyboard, it might help to manually enter KDL via Alt-SysReq-d before the panic. Thanks for the output - it looks completely normal, though, and from this info, it also looks like hrev38078 is not going to change anything for you.
comment:8 by , 15 years ago
Yes i figured out that the usb keyboard was a problem for kdl. I have a USB to PS2 adapter so here the net_domains and net_interfaces after a crashed. (with hrev38077)
by , 15 years ago
Attachment: | Crashed-net_domains-net_interfaces.JPG added |
---|
comment:10 by , 15 years ago
Two things: the crash isn't the one mentioned here, and looks completely unrelated - the KDL output is only really helpful if the crash actually happened. And then, you did not provide the output of the "net_interface <address>" command where <address> is the the first column of the output of the "net_interfaces" command.
Anyway, thanks for testing so quickly! For further tests, you could also enable debug output in src/add-ons/kernel/network/stack/route.cpp, interfaces.cpp, and datalink.cpp by uncommenting the "#define TRACE_{ROUTES|INTERFACES|DATALINK}" lines after the header includes.
by , 14 years ago
by , 14 years ago
Attachment: | net_interfaces.JPG added |
---|
comment:11 by , 14 years ago
I don't know if it's always the same crash, i'm no programmer or debugger, but it's always after trying to use a program which using network; Webpositive, Bezilla, ping
For the test here i just do a ping, it says it can't reach the adress and than crash.
I added the kdl2.jpg of a crash and the net_interfaces and net_interace <address>. Seems the loop address have an error.
It was with hrev38091 with the uncommented #define you told me. Hope it helps!
by , 14 years ago
comment:12 by , 14 years ago
Ok i did some more testing and after updating to the last revision on my laptop, my network wasn't working anymore too but without the crashing problem.
I pluged my cable modem directly on my tower pc and now the network is working and no crashing. It seems when i'm using my linksys router, something is going wrong with the dhcp when before it was fine even using my router. But it doesn't explain the crashing on one computer and not the other one when using my router.
comment:13 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
The crashing problem should be fixed in hrev38118, I could not reproduce the exact problem, though. Since the network itself probably still does not work for you, please open a new ticket to track that. Thanks for your investigations, that was very helpful!
comment:14 by , 14 years ago
I still having crashes with the last revision, i also try with the hrev38122 anyboot image which i dd into a usb key and i got the same crash but also once in a while the crash we can see in Crashed-net_domains-net_interfaces.JPG file. Both of the crash is hapening when i use my router, the dhcp is not working right and than i try to use the network. When i ping local loop, 127.0.0.1 i don't crash but i do when i ping google.
I manually enter the right local ip i should get from the router, the gateway, dns and so on and the net is working and no crashing when using internet. When i choose dhcp again, the crashes are back and no network again.
With alpha2 dhcp with the router is working fine and no crash.
comment:15 by , 14 years ago
It appears you have a dhcp timeout or error caused by using rgephy.
If it was working with Alpha 2 then you were using rlphy. Checking your syslog, Haiku is loading rgephy for your network card. rgephy does not work with some rtl81xx cards (like mine). Guessing some Realtek cards want rgephy and others rlphy to work. Axel's card would not work with rlphy.
Axel fixed #6295 by having rlphy load for my network card. I tested with Haiku 38122 and I have networking again. Syslog shows rlphy for me and no rgephy anywhere. With rgephy, networking would not work for me either. Like the error you are getting.
comment:16 by , 14 years ago
I don't know how to change which i'm using but it doesn't explain why, when i pluged my cable modem directly into my computer, the dhcp and internet works but not when i plug my modem cable into my wifi router and than link it by cable to my computer.
Both was working with alpha2. Also did your network problem crashed the OS for you?
comment:17 by , 14 years ago
Alpha2 was using rlphy for rtl81xx driver. Axel later changed rtl81xx to use rgephy because his network card was not working with rlphy.
I cannot recall if the OS would crash but you have dhcp issue like I was having. If you were using rtl81xx with Alpha2 then it was with rlphy.
I cannot find your network hardware listed in your syslog. Give listdev output; only copy the network card section of listdev. That way we can check if you were using rtl81xx or Haiku 8169 driver with Alpha2.
Wait for Axel to look this over to see if I am right or not. Waiting for your listdev of network card.
comment:18 by , 14 years ago
Alpha2 was also still using the rtl8169 driver IIRC.
In any case, the crashing problem should be finally gone with hrev38145 - this time I was able to reproduce the problem; it was needed that the interface was not configured correctly in order to receive an ICMP error.
For the DHCP problems with your router, please open a new ticket for that issue. Interesting to have would be a tcpdump session of the DHCP negotiation.
by , 14 years ago
comment:19 by , 14 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
still no net work for me with rev:38122,it even went to kdl once trying to load a webpage,but as i have a usb kb i could'nt do anything.i don't know if syslog would be of anyhelp.i've attached it anyway.
comment:20 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Please read the comments before reopening a ticket - the issue you likely have encountered has been fixed in hrev38145 - 23 revisions later than the revision you tested with.
If you have other network problems, please open a new ticket for those.
comment:21 by , 14 years ago
comment:22 by , 14 years ago
Oh my :-) Did the KDL change? In any case, can you tell me exactly what you are doing to reproduce the problem? Does the read fault also happen when the addresses are shown?
If nothing really changed, feel free to reopen the ticket, please.
comment:23 by , 14 years ago
Since i don't know much what i read on the screen in KDL, hard to know if there is real changes and what could help you. Habitually the read fault is on the loop address but not always and sometimes after a crash i don't find read fault going trough all the adress with net_route or net_interface. Happened once there was a read fault showing just doing net_domains after the list of adrdesses.
At least when the network is working, i don't crash at all using internet.
comment:24 by , 14 years ago
Okay, so it only crashes when the internet is not working - that's already a hint. But what exactly are you doing that causes the system to crash? How could I reproduce it?
Also, it's okay that you don't understand what KDL is trying to tell you - but I might, if you would attach another image of one :-)
Thanks, I hope we'll have this sorted out soon!
comment:26 by , 14 years ago
Yes no more crashing too when i'm trying to reach net with a wrong network dhcp config.
Forgot to mention my network card is Realtek RTL8111/8168B PCI Express Gigabit Ethernet controller (rev 02)