* Spotted a few reference counting bugs that were probably responsible for   #6446, although I could not reproduce the exact problem. * net_datalink::is_local_[link_]address() now releases a previous reference if   the _interfaceAddress arguments does not point to NULL. * When a buffer is received from a device, it's interface_address should be NULL   already.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38118 a95241bf-73f2-0310-859d-f6bbb57e9c96